--- a/web-flask/templates/smartlcd.html
+++ b/web-flask/templates/smartlcd.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="sillage">
-          <div class="stat-title">Fragrance Notes</div>
+          <div class="stat-title">Fragrance Accords</div>
           <div class="stat-bar"><span id="note-1">-</span></div>
           <div class="stat-bar"><span id="note-2">-</span></div>
           <div class="stat-bar"><span id="note-3">-</span></div>
@@ -59,14 +59,19 @@
     </div>
 
     <div class="right-section">
-      <div class="notes" id="notes-grid">
-        <!-- Optionally style or add dynamic note badges -->
-      </div>
-      <div class="bottle-img">
+        <div class="notes">
+            <div class="stat-title">Fragrance Notes</div>
+            <div class="stat-bar"><span id="note-1">-</span></div>
+            <div class="stat-bar"><span id="note-2">-</span></div>
+            <div class="stat-bar"><span id="note-3">-</span></div>
+            <div class="stat-bar"><span id="note-4">-</span></div>
+            <div class="stat-bar"><span id="note-5">-</span></div>
+        </div>
+        <div class="bottle-img">
         <img src="../static/images/ECLAT NOIR Perfume.png" alt="ÉCLAT NOIR bottle" />
-      </div>
+        </div>
     </div>
-  </div>
+</div>
 
   <script>
     const socket = io();
