--- a/web-flask/templates/smartlcd.html
+++ b/web-flask/templates/smartlcd.html
@@ -60,12 +60,11 @@
 
     <div class="right-section">
         <div class="notes">
-            <div class="stat-title">Fragrance Notes</div>
-            <div class="stat-bar"><span id="note-1">-</span></div>
-            <div class="stat-bar"><span id="note-2">-</span></div>
-            <div class="stat-bar"><span id="note-3">-</span></div>
-            <div class="stat-bar"><span id="note-4">-</span></div>
-            <div class="stat-bar"><span id="note-5">-</span></div>
+            <div class="note one"><span id="note-1"></span></div>
+            <div class="note two"><span id="note-2"></span></div>
+            <div class="note three"><span id="note-3"></span></div>
+            <div class="note four"><span id="note-4"></span></div>
+            <div class="note five"><span id="note-5"></span></div>
         </div>
         <div class="bottle-img">
         <img src="../static/images/ECLAT NOIR Perfume.png" alt="ÉCLAT NOIR bottle" />
