--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -23,7 +23,7 @@ body::before {
 
 /* === ALIEN - P001 === */
 body.bg-alien {
-    background: linear-gradient(90deg, #2e1d2e 0%, #5a4163 55%, #f6fafd 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #5a4163 70%, #2e1d2e 100%);
 }
 body.bg-alien::before {
     background: radial-gradient(circle, #f6fafd 80%,  #5a4163 100%);
