--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -23,7 +23,7 @@ body::before {
 
 /* === ALIEN - P001 === */
 body.bg-alien {
-    background: linear-gradient(90deg, #f6fafd 0%, #5a4163 70%, #2e1d2e 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #5a4163 85%, #2e1d2e 100%);
 }
 body.bg-alien::before {
     background: radial-gradient(circle, #5a4163 80%,  #f6fafd 100%);
@@ -354,10 +354,10 @@ body.fade-transition {
     padding: 4vh;
 }
 .bottle-img img {
-    width: 100%;
+    width: 80%;
     height: auto;
     border-radius: 30px;
-    box-shadow: 0 8px 32px #c9bfa7;
+    box-shadow: 0 8px 32px #ebeae6;
 }
 @media (max-width: 1100px) {
     .container { flex-direction: row; }
