--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -31,7 +31,7 @@ body.bg-alien::before {
 
 /* === INDIVIDUEL - P005 === */
 body.bg-individuel {
-    background: linear-gradient(90deg, #dde4ec 0%, #c6d1dd 55%, #f6fafd 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #c6d1dd 75%, #dde4ec 100%);
 }
 body.bg-individuel::before {
     background: radial-gradient(circle, #c6d1dd 80%, #f6fafd 100%);
