--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -39,10 +39,10 @@ body.bg-individuel::before {
 
 /* === BURBERRY-WOMEN - P007 === */
 body.bg-burberry-women {
-    background: linear-gradient(90deg, #f6fafd 0%, #f3e1c0 70%, #eedbc1 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #f0cb8a 80%, #eedbc1 100%);
 }
 body.bg-burberry-women::before {
-    background: radial-gradient(circle, #f6fafd 80%, #f3e1c0 100%);
+    background: radial-gradient(circle, #ffd993 80%, #f6fafd 100%);
 }
 
 /* === BVLGARI-MAN - P017 === */
