--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -47,7 +47,7 @@ body.bg-burberry-women::before {
 
 /* === BVLGARI-MAN - P017 === */
 body.bg-bvlgari-man {
-    background: linear-gradient(90deg, #d2d4d6 0%, #c9ced1 55%, #f6fafd 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #c9ced1 75%, #d2d4d6 100%);
 }
 body.bg-bvlgari-man::before {
     background: radial-gradient(circle, #c9ced1 80%, #f6fafd 100%);
