--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -55,10 +55,10 @@ body.bg-bvlgari-man::before {
 
 /* === BEE - P020 === */
 body.bg-bee {
-    background: linear-gradient(90deg,  #f6fafd 0%, #836909 85%,#71560b  100%);
+    background: linear-gradient(90deg,  #f6fafd 0%, #e8b869 85%,#efcea8  100%);
 }
 body.bg-bee::before {
-    background: radial-gradient(circle, #876d10 80%,  #f6fafd 100%);
+    background: radial-gradient(circle, #d99843 80%,  #f6fafd 100%);
 }
 
 /* === LACOSTE POUR HOMME - P026 === */
