--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -71,7 +71,7 @@ body.bg-lacoste-pour-homme::before {
 
 /* === GÉRANIUM POUR MONSIEUR - P030 === */
 body.bg-geranium-pour-monsieur {
-    background: linear-gradient(90deg,#f6fafd 0%, #e3bcbc 55%, #d3f1e1 100%);
+    background: linear-gradient(90deg,#f6fafd 0%, #e3bcbc 55%, #fdeeee 100%);
 }
 body.bg-geranium-pour-monsieur::before {
     background: radial-gradient(circle,#f6fafd 50%,  #e3bcbc 100%);
