--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -87,10 +87,10 @@ body.bg-far-away-royale::before {
 
 /* === GARDENIA - P047 === */
 body.bg-gardenia {
-    background: linear-gradient(90deg, #f3f0ea 0%, #e4ddd0 65%, #f6fafd 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #ad68c8 65%,#f6fafd 100%);
 }
 body.bg-gardenia::before {
-    background: radial-gradient(circle, #f6fafd 80%, #e4ddd0 100%);
+    background: radial-gradient(circle, #cfa0e1 80%, #f6fafd  100%);
 }
 
 /* === THE ICEBERG FRAGRANCE - P049 === */
