--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -87,7 +87,7 @@ body.bg-far-away-royale::before {
 
 /* === GARDENIA - P047 === */
 body.bg-gardenia {
-    background: linear-gradient(90deg, #edd8ff 0%, #8f6ba4 85%,#c19cd2 100%);
+    background: linear-gradient(90deg, #edd8ff 0%, #8f6ba4 85%,#9880a6 100%);
 }
 body.bg-gardenia::before {
     background: radial-gradient(circle, #cfa0e1 80%, #f6fafd  100%);
