--- a/web-flask/static/css/smartlcd.css
+++ b/web-flask/static/css/smartlcd.css
@@ -90,15 +90,15 @@ body.bg-gardenia {
     background: linear-gradient(90deg, #edd8ff 0%, #8f6ba4 85%,#9880a6 100%);
 }
 body.bg-gardenia::before {
-    background: radial-gradient(circle, #cfa0e1 80%, #f6fafd  100%);
+    background: radial-gradient(circle, #9880a6 80%, #f6fafd  100%);
 }
 
 /* === THE ICEBERG FRAGRANCE - P049 === */
 body.bg-the-iceberg-fragrance {
-    background: linear-gradient(90deg, #f6fafd 0%, #b2dff4 55%,  #d0ebf8 100%);
+    background: linear-gradient(90deg, #f6fafd 0%, #f6fafd 55%, #f3e3c7 100%);
 }
 body.bg-the-iceberg-fragrance::before {
-    background: radial-gradient(circle, #f6fafd 80%, #b2dff4 100%);
+    background: radial-gradient(circle, #f3e3c7 80%, #f6fafd 100%);
 }
 /* Animation cho body background */
 body.fade-transition {
