--- a/web-flask/templates/smartlcd.html
+++ b/web-flask/templates/smartlcd.html
@@ -50,12 +50,12 @@
         <div class="sillage">
           <div class="country_brand">
             <div class="country_brand1">
-              <div class="stat-title" id="country">Country</div>
-              <div class="stat-bar"><span>France</span></div>
+              <div class="stat-title">Country</div>
+              <div class="stat-bar"  id="country"><span>France</span></div>
             </div>
             <div class="country_brand1">
-              <div class="stat-title" id="brand">Brand</div>
-              <div class="stat-bar"><span>Chanel</span></div>
+              <div class="stat-title">Brand</div>
+              <div class="stat-bar" id="brand"><span>Chanel</span></div>
             </div>
           </div>
         </div>
